test/regress/ext:multi-memory/binary0.bin.wast
(module binary "\00\61\73\6d\01\00\00\00\05\85\80\80\80\00\02\00" "\02\00\02")
(module binary
  "\00\61\73\6d\01\00\00\00\05\87\80\80\80\00\03\00"
  "\03\00\04\00\05"
)
(module binary
  "\00\61\73\6d\01\00\00\00\05\85\80\80\80\00\02\00"
  "\00\00\00\0b\86\80\80\80\00\01\00\41\00\0b\00"
)
(module binary
  "\00\61\73\6d\01\00\00\00\05\85\80\80\80\00\02\00"
  "\00\00\01\0b\87\80\80\80\00\01\02\01\41\00\0b\00"
)
(module binary
  "\00\61\73\6d\01\00\00\00\05\85\80\80\80\00\02\00"
  "\00\00\01\0b\87\80\80\80\00\01\02\01\41\00\0b\00"
)
(assert_malformed
  (module binary
    "\00\61\73\6d\01\00\00\00\05\0a\02\00\01\00\82\80"
    "\80\80\80\00"
  )
  "integer representation too long"
)
(assert_malformed
  (module binary "\00\61\73\6d\01\00\00\00\05\03\02\00\00")
  "unexpected end of section or function"
)
